Prevents extra vertical spacing when using block/inline layout for the inline description variant

--- a/packages/react/src/ActionList/ActionList.module.css
+++ b/packages/react/src/ActionList/ActionList.module.css
@@ -630,6 +630,7 @@ default block */
     position: relative;
     display: block;
     word-break: normal;
+    line-height: normal;
 
     & .ItemLabel {
       display: inline;
